--- a/calculator/templates/calculator/main.html
+++ b/calculator/templates/calculator/main.html
@@ -1,6 +1,6 @@
 {% extends "mainApp/wrapper.html" %}
 
-{% block title %}Практика{% endblock %}
+{% block title %}Калькулятор{% endblock %}
 
 {% block content %}
 
@@ -10,24 +10,38 @@
             <main role="main">
                 <div class="jumborton">
                     <div class="col-sm-8 mx-auto">
-                        <h1>Калькулятор</h1>
+                        <h1 class="mb-4">Калькулятор</h1>
                         <div id="input_request">
                             <form>
                               {% csrf_token %}
-                              <div class="form-group mb-3 mt-">
+                              <div class="form-group mb-3">
                                 <label for="inputRegex">
-                                  <p class="mt-4 mb-2">
-                                    Введите регулярное выражение.</p>
+                                  <h4 class="mt-4 mb-2">
+                                    Введите регулярное выражение:</h4>
                                 </label>
-                                <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" type="text" id="inputRegex"
+                                <input class="form-control noresize w-50 " rows="1" autocomplete="off" placeholder="Введите здесь" type="text" id="inputRegex"
                                   name="q" required>
                               </div>
                               <button type="submit" class="btn btn-primary" id="btn_accept">Преобразовать в мин. ДКА</button>
                             </form>
                         </div>
                         <div id="display_automate" style="display: none;">
-                            <p id="result"></p>
-                            <button class="mt-3 btn btn-primary" id="btn_repeat">Повторить</button>
+                            <h4 class="mb-4 mt-5" id="inputRegex_result"></h4>
+                            <div id="graphviz_svg"></div>
+
+                            <form>
+                                {% csrf_token %}
+                                <div class="form-group mb-3">
+                                <label for="inputWord">
+                                    <h4 class="mt-4 mb-2">
+                                    Введите слово:</h4>
+                                </label>
+                                <input class="form-control noresize w-50 " autocomplete="off" rows="1" placeholder="Введите здесь" type="text" id="inputWord"
+                                    name="q" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary" id="btn_check">Проверить</button>
+                            </form>
+
                         </div>
                     </div>
                 </div>
@@ -41,9 +55,17 @@
         $('.list-group-item-linkable').on('click', function () {
             window.location.href = $(this).data('link');
         });
+
+
     });
     $('.navbar-nav').find('li.active').removeClass('active');
     $('#calculator_tab').addClass('active');
 </script>
+
+{% load staticfiles %}
+<script src="{% static 'js/viz.js/viz.js' %}"></script>
+<script src="{% static 'js/viz.js/full.render.js' %}"></script>
+<script src="{% static 'js/calculator/calculator.js' %}"></script>
+
 
 {% endblock %}
